--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,26 @@
 .App {
-  text-align: center;
+  min-height: 100vh;
+}
+
+.NavDrawer {
+  border-right: 0 !important;
+}
+
+.DrawerContent a {
+  text-decoration: none;
 }
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex-center {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.UnstyledLink {
+  text-decoration-line: unset;
+  color: unset;
 }
